implemented filtering of the customer by name or id (upd) - filtering reports by engine type and frame number.