@@ -49,7 +49,8 @@ public class TechnicianController {
 
     @GetMapping("/dashboard")
     @TechnicianOnly
-    public String dashboard(@RequestParam(required = false) String filter, Model model) {
+    public String dashboard(@RequestParam(required = false) String filter, @RequestParam(required = false) String frameNumber,
+                            @RequestParam(required = false) String engineType,Model model) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String loggedInEmail = authentication.getName();
 
@@ -64,16 +65,23 @@ public class TechnicianController {
                     .collect(Collectors.toList());
         }
 
-        List<BikeReport> bikeReports = bikeReportService.getAll()
+        List<BikeReport> bikeReports = bikeReportService
+                .getReportsWithDetailsForTechnician(technician.getId())
                 .stream()
                 .filter(report -> report.getTechnician().getId().equals(technician.getId()))
-                .collect(Collectors.toList());
+                .filter(report -> frameNumber == null || frameNumber.isBlank() ||
+                        report.getBike().getFrameNumber().toLowerCase().contains(frameNumber.toLowerCase()))
+                .filter(report -> engineType == null || engineType.isBlank() ||
+                        report.getBike().getBikeModel().getEngineType().toLowerCase().contains(engineType.toLowerCase()))
+                .toList();
 
         model.addAttribute("totalReports", totalReports);
         model.addAttribute("totalClients", customers.size());
         model.addAttribute("technician", technician);
         model.addAttribute("customers", customers);
         model.addAttribute("bikeReports", bikeReports);
+        model.addAttribute("frameNumber", frameNumber);
+        model.addAttribute("engineType", engineType);
         model.addAttribute("filter", filter);
         return "technician";
     }
